@@ -38,6 +38,9 @@
  * \file
  */
 
+#if ! defined(WIN32)
+	#include <sys/param.h>
+#endif
 
 #include "UpnpGlobal.h" /* For EXPORT_SPEC */
 
@@ -55,7 +58,7 @@ extern "C" {
 #endif
 
 
-#ifdef __FreeBSD__
+#if defined(BSD)
 	#define PTHREAD_MUTEX_RECURSIVE_NP PTHREAD_MUTEX_RECURSIVE
 #endif
 
